vlib/v/parser/tests/division_by_zero_0x0_err.out
vlib/v/parser/tests/division_by_zero_0x0_err.v:2:12: error: division by zero
    1 | fn main() {
    2 |     println(1/0x0)
      |               ~~~
    3 | }
