vlib/v/parser/tests/division_by_zero_0x0_err.vv
fn main() {
	println(1/0x0)
}
